--- a/styles/gunnerus.css
+++ b/styles/gunnerus.css
@@ -15,6 +15,9 @@
 
 body {
     padding-top: 50px;
+    padding-top: 50px;
+    position: relative;
+    padding-bottom: 6.5em;
 }
 
 textarea {
@@ -27,6 +30,8 @@ textarea {
 	text-align: center;
 	background: #f8f8f8;
     border-top: 5px solid #e7e7e7;
+	position: absolute;
+	bottom: 0;
 }
 
 .footer img {
