--- a/styles/gunnerus.css
+++ b/styles/gunnerus.css
@@ -5,8 +5,8 @@
 }
 
 .navbar-brand span {
-    font-size: 1.5em;
-    margin-left: 0.25em;
+	font-size: 1.5em;
+	margin-left: 0.25em;
 }
 
 .navbar {
@@ -18,6 +18,7 @@ body {
     padding-top: 50px;
     position: relative;
     padding-bottom: 7em;
+	min-height: 100vh;
 }
 
 textarea {
