--- a/styles/gunnerus.css
+++ b/styles/gunnerus.css
@@ -221,6 +221,12 @@ body {
   margin-top: 0;
 }
 
+.user-cruise .row .well {
+	margin-bottom: 0px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
 
 /*
  * Placeholder dashboard ideas
